stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_old_let_main.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/old-let-main.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/old-let-main.ml:1:1]
 1 │ let main () = println "hello world"
   · ─┬─
   ·  ╰── expected top-level `use`, `pub mod`, `include`, `external`, `type`, or `fn` declaration
   ╰────
  help: try: fn main() { println("hello world") }
